Issue 2092 (#2096)
* fix: improved selection of index in query planner

This has been taken from the most recent class in OrientDB where the issue was already fixed.

Fixed issue: Delete of edge uses wrong index if many edges are present #2092

* Another updated from the latest OrientDB query engine

* More fixes from OrientDB latest SQL engine

* More changes from OrientDB main branch

* Additional fixes in query plan

* Fixed LET

* Fixed more tests

* fix: selected the query with the best plan